# spacepanda

./: .envrc  .envrc.example  .gitignore  BENCHMARKS.md  BETA_ROADMAP.md  CLI_INTEGRATION_TESTS.md  CRDT_IMPLEMENTATION_FIXES.md  Cargo.toml  DEPENDENCY_UPDATE_SUMMARY.md  DEPLOYMENT.md  DEVELOPMENT.md  DHT_BENCHMARKS_SUMMARY.md  Dockerfile  E2E_TEST_SUMMARY.md  EXTERNAL_AUDIT_RESPONSE.md  INTEGRATION_COMPLETE.md  LICENSE-MIT  MEMBER_REMOVAL_STATUS.md  MLS_READINESS_CHECKLIST.md  MULTI_SERVER_TESTING.md  MULTI_USER_IMPLEMENTATION.md  P2P_STATUS.md  P2P_TEST_RESULTS.md  P2P_WIRING_COMPLETE.md  PHASE2_COMPLETION.md  PHASE_4_MLS_INTEGRATION.md  PHASE_4_SPACES_INITIAL_IMPLEMENTATION.md  PHASE_4_STORAGE_COMPLETE.md  PRIORITY_3.2_SUCCESS.md  PRIORITY_3.3_COMPLETE.md  PRIORITY_4_COMPLETE.md  PRIORITY_5_COMPLETE.md  PRIORITY_6_COMPLETE.md  PRIORITY_6_OPTIONS.md  PRIORITY_9_COMPLETE.md  PRIVACY.md  PRIVACY_IMPLEMENTATION_SUMMARY.md  PRIVACY_SPRINT_SUMMARY.md  PRIVACY_THREAT_MODEL.md  PRODUCTION_READINESS_REPORT.md  (+7 more)
deploy/: kubernetes.yaml  (+1 more)
spacepanda-api/: Cargo.toml  build.rs
spacepanda-api/src/: auth.rs  error.rs  main.rs  proto.rs  session.rs
spacepanda-api/src/services/: auth_service.rs  message_service.rs  mod.rs  network_service.rs  space_service.rs
spacepanda-cli/: Cargo.toml  README.md
spacepanda-cli/src/: main.rs
spacepanda-cli/tests/: integration_tests.rs  network_integration_tests.rs
spacepanda-core/: CRITIQUE_RESPONSE_V2.md  CRYPTO_IMPLEMENTATION_UPGRADE.md  Cargo.toml  INTEGRATION_TEST_SUMMARY.md  ORSET_OPTIMIZATION_REPORT.md  PERFORMANCE_BASELINE_REPORT.md  PHASE_3_COMPLETE.md  PHASE_3_TESTING_COMPLETE.md  PRIORITY_7_COMPLETE.md  PRIORITY_8_COMPLETE.md  PRODUCTION_IDENTITY_SYSTEM.md  ROUTER_SECURITY_TESTS_SUMMARY.md  SECURITY_FIXES_CODE_COMPARISON.md  SECURITY_FIXES_SUMMARY.md  TESTING_TODO_BEFORE_MLS.md  UNWRAP_AUDIT_COMPLETE.md  UNWRAP_AUDIT_PROGRESS.md
spacepanda-core/benches/: BENCHMARKS.md  BENCHMARK_COMPLETION_SUMMARY.md  DHT_BENCHMARKS_SUMMARY.md  bench_config.rs  crdt_operations.rs  crypto_operations.rs  dht_operations.rs  profile_or_set_merge.rs  rpc_protocol.rs  storage_operations.rs
spacepanda-core/docs/: CLIPPY_CLEANUP_SUMMARY.md  OPENMLS_INTEGRATION.md  SPACEPANDA_PROJECT_OVERVIEW.md  TEST_COVERAGE_REPORT.md
spacepanda-core/examples/: logging_demo.rs
spacepanda-core/fuzz/: Cargo.toml
spacepanda-core/fuzz/fuzz_targets/: fuzz_group_blob_parsing.rs  fuzz_metadata_encryption.rs  fuzz_mls_message_parsing.rs  fuzz_sealed_sender.rs  fuzz_snapshot_parsing.rs
spacepanda-core/src/: lib.rs  test_imports.rs
spacepanda-core/src/config/: error.rs  feature_flags.rs  mod.rs
spacepanda-core/src/core-dht/: README.md
spacepanda-core/src/core_dht/: client.rs  dht_config.rs  dht_key.rs  dht_node.rs  dht_storage.rs  dht_value.rs  events.rs  kad_search.rs  message.rs  mod.rs  replication.rs  routing_table.rs  server.rs
spacepanda-core/src/core_dht/tests/: mod.rs  resilience_tests.rs
spacepanda-core/src/core_identity/: README.md  bundles.rs  channel.rs  device_id.rs  device_key.rs  global.rs  keypair.rs  keys.rs  master_key.rs  metadata.rs  mod.rs  signatures.rs  store.rs  user_id.rs  validation.rs
spacepanda-core/src/core_identity/keystore/: file_keystore.rs  memory_keystore.rs  mod.rs
spacepanda-core/src/core_identity/tests/: adversarial_tests.rs  crdt_advanced_tests.rs  crdt_edge_cases.rs  crdt_laws.rs  crdt_mission_critical_tests.rs  crdt_replica_tests.rs  crypto_sanity_tests.rs  helpers.rs  identity_crypto_tests.rs  identity_edge_cases.rs  integration_tests.rs  mod.rs  security_tests.rs  unit_tests.rs
spacepanda-core/src/core_mls/: ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  MLS_INTEGRATION_PLAN.md  README.md  ROADMAP.md  SECURITY.md  api.rs  commit.rs  core_mls_test_suite.rs  crypto.rs  discovery.rs  encryption.rs  errors.rs  events.rs  group.rs  handle.rs  integration_tests.rs  mod.rs  padding.rs  persistence.rs  persistent_provider.rs  proposals.rs  rate_limit.rs  sealed_metadata.rs  sealed_sender.rs  security_tests.rs  service.rs  timing_obfuscation.rs  transport.rs  tree.rs  types.rs  welcome.rs
spacepanda-core/src/core_mls/docs/: ALPHA_TODO.md  ALPHA_TODO_OVERVIEW.md  ARCHITECTURE.md  CANONICAL_IMPLEMENTATION.md  CI_CD_SETUP.md  DEPLOYMENT_CHECKLIST.md  EDGECASES_TO_COVER.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  OPENMLS_PROVIDER_ARCHITECTURE.md  PERSISTENCE_STRATEGY.md  PHASE11_SUMMARY.md  PHASE_1_COMPLETE.md  TEST_SUITE_STATUS.md  UPDATED_GOALS.md  USAGE.md
spacepanda-core/src/core_mls/engine/: adapter.rs  group_ops.rs  message_adapter.rs  mod.rs  openmls_engine.rs
spacepanda-core/src/core_mvp/: IMPLEMENTATION_TODO.md  MANAGER_RESPONSEv2.md  PHASE_1_COMPLETE.md  PRIORITY_1_COMPLETE.md  PRIORITY_2_COMPLETE.md  PRIORITY_3.1_INCOMPLETE.md  PRIORITY_3_STATUS.md  README.md  channel_manager.rs  errors.rs  group_provider.rs  identity_scoping.rs  lib.rs  message_mixer.rs  mod.rs  network.rs  peer_discovery.rs  types.rs
spacepanda-core/src/core_router/: README.md  metrics.rs  mod.rs  onion_router.rs  overlay_discovery.rs  rate_limiter.rs  route_table.rs  router_handle.rs  rpc_protocol.rs  session_manager.rs  transport_manager.rs
spacepanda-core/src/core_space/: async_manager.rs  channel.rs  invite.rs  manager.rs  manager_impl.rs  mod.rs  space.rs  types.rs
spacepanda-core/src/core_store/: README.md  mod.rs
spacepanda-core/src/health/: mod.rs
spacepanda-core/src/logging/: error.rs  level.rs  mod.rs
spacepanda-core/src/metrics/: collector.rs  exporter.rs  mod.rs
spacepanda-core/src/shutdown/: mod.rs
spacepanda-core/src/test_utils/: assertions.rs  async_helpers.rs  deterministic_rng.rs  fixtures.rs  mod.rs
spacepanda-core/src/tracing/: mod.rs
spacepanda-core/tests/: dht_integration.rs  e2e_crdt_tests.rs  end_to_end.rs  http_harness_admin_roles.rs  http_harness_integration.rs  integration.rs  integration_tests.rs  network_integration.rs  stress_tests.rs
spacepanda-core/tests/integration/: full_e2e_message_flow.rs  mod.rs  store_dht_sync.rs  store_router_sync.rs
test-harness/: Cargo.toml
test-harness/src/: main.rs
(+178 files in other folders)
