[workspace]
resolver = "2"
members = [
    "spacepanda-core",
    "spacepanda-cli",
]
exclude = [
    "spacepanda-core/fuzz",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/spacepanda"
authors = ["Your Name <your.email@example.com>"]

[workspace.dependencies]
# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
