[package]
name = "spacepanda-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
thiserror.workspace = true
anyhow.workspace = true
openmls = "0.6"
rustls = "0.23"
tokio.workspace = true
snow = "0.9"  # Noise protocol implementation
chacha20poly1305 = "0.10"  # AEAD cipher
blake2 = "0.10"  # For hashing
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.9.2"
hex = "0.4.3"
bincode = "1.3"
aes-gcm = "0.10"
argon2 = "0.5"
crc32fast = "1.4"
bs58 = "0.5"

# Real cryptography (fixing TODOs)
ed25519-dalek = { version = "2.1", features = ["serde"] }
x25519-dalek = { version = "2.0", features = ["serde", "static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
curve25519-dalek = "4.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"
futures = "0.3"
