[package]
name = "spacepanda-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
# OpenMLS is now the only supported MLS implementation

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
metrics.workspace = true
thiserror.workspace = true
anyhow.workspace = true
openmls = "0.7.1"
openmls_rust_crypto = { version = "0.4", features = ["test-utils"] }
openmls_basic_credential = "0.4"
openmls_traits = "0.4"
openmls_memory_storage = { version = "0.4", features = ["persistence"] }
rustls = "0.23"
tokio.workspace = true
async-trait = "0.1"
snow = "0.9"  # Noise protocol implementation
chacha20poly1305 = "0.10"  # AEAD cipher
blake3 = "1.5"  # Modern, faster hashing (upgraded from blake2)
serde.workspace = true
serde_json.workspace = true
toml = "0.8"  # For config file parsing
humantime-serde = "1.1"  # Duration serialization
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.9.2"
hex = "0.4.3"
bincode = "1.3"
aes-gcm = "0.10"
argon2 = "0.5"
crc32fast = "1.4"
bs58 = "0.5"
hashlink = "0.9"  # LRU cache for seen_requests
zeroize = { version = "1.7", features = ["derive"] }  # Secure memory zeroing
secrecy = "0.8"  # Wrapper types for sensitive data

# Real cryptography (fixing TODOs)
ed25519-dalek = { version = "2.1", features = ["serde"] }
x25519-dalek = { version = "2.0", features = ["serde", "static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
curve25519-dalek = "4.1"
hpke = "0.12"  # RFC 9180 compliant HPKE
hpke-rs-crypto = "0.2"  # Crypto backend for hpke
num_cpus = "1.16"  # For system metrics
clap = { version = "4.5", features = ["derive"] }  # CLI argument parsing
axum = "0.7"  # HTTP web framework for test harness
rusqlite = { version = "0.32", features = ["bundled", "blob", "serde_json"] }  # SQLite with bundled library
r2d2 = "0.8"  # Connection pool for rusqlite
r2d2_sqlite = "0.25"  # SQLite connection pool adapter

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"
futures = "0.3"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand_core = "0.6"
chrono = "0.4"
proptest = "1.4"
tower = "0.5"  # For testing HTTP services

[[bench]]
name = "rpc_protocol"
harness = false

[[bench]]
name = "dht_operations"
harness = false

[[bench]]
name = "crdt_operations"
harness = false

[[bench]]
name = "crypto_operations"
harness = false

[[bench]]
name = "profile_or_set_merge"
harness = false


[profile.bench]
debug = true

