[package]
name = "test-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
